<resources>
    <string name="app_name">Quiz App</string>

    <string name="welcome_to">welcome to</string>
    <string name="description">in this quiz app, we will cover few questions about solar system!</string>
    <string name="language_english_arabic">Language: English, Arabic</string>
    <string name="time_limit_02_00">Time Limit: 02:00</string>

    <string name="question_1_of_4">Question 1 of 4</string>
    <string name="question_1">How many moons mars have?</string>
    <string name="_13" translatable="false">13</string>
    <string name="_50" translatable="false">50</string>
    <string name="_2" translatable="false">2</string>

    <string name="question_2_of_4">Question 2 of 4</string>
    <string name="question_2">Which of these planets is the smallest?</string>
    <string name="earth">Earth</string>
    <string name="jupiter">Jupiter</string>
    <string name="mercury">Mercury</string>
    <string name="uranus">Uranus</string>

    <string name="question_3_of_4">Question 3 of 4</string>
    <string name="question_3">What is the red planet?</string>
    <string name="mars">Mars</string>

    <string name="question_4_of_4">Question 4 of 4</string>
    <string name="questions_4">Questions: 4</string>
    <string name="question_4">What is the sun is mainly made from?</string>
    <string name="hydrogen_gas">Hydrogen Gas</string>
    <string name="water">Water</string>
    <string name="dust">Dust</string>
    <string name="helium_gas">Helium Gas</string>

    <!-- Button submit Quiz -->
    <string name="submit">Submit</string>
</resources>