<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/margin_16"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--welcome text -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/welcome_to"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16" />

        <!-- app name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:fontFamily="@font/open_sans_extrabold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/text_30" />

        <!-- quiz description -->
        <TextView
            style="@style/body_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16"
            android:gravity="center"
            android:text="@string/description" />

        <!-- quiz details -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                style="@style/body_text"
                android:text="@string/questions_4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="@dimen/margin_16"
                android:text="@string/time_limit_02_00"
                style="@style/body_text"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_question_number"
                android:layout_marginBottom="@dimen/margin_16"
                style="@style/body_text"
                android:text="@string/language_english_arabic" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/margin_16"
            android:scaleType="centerCrop"
            android:src="@drawable/space" />

        <!-- Question [1] -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/body_text"
            android:text="@string/question_1_of_4"
            android:textColor="@color/purple_700" />
        <TextView
            style="@style/body_text"
            android:textColor="@color/teal_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_1" />

        <!-- Question [1] : Answers -->
        <RadioGroup
            android:id="@+id/rb_question_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_13"
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="questionOneOnRadioButtonClicked"
                android:text="@string/_13" />

            <RadioButton
                android:id="@+id/radio_50"
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="questionOneOnRadioButtonClicked"
                android:text="@string/_50" />

            <!-- Correct Answer -->
            <RadioButton
                android:id="@+id/radio_2"
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="questionOneOnRadioButtonClicked"
                android:text="@string/_2" />

        </RadioGroup>

        <!-- Question [2] -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_2_of_4"
            android:layout_marginTop="@dimen/margin_16"
            style="@style/body_text"
            android:textColor="@color/purple_700" />
        <TextView
            style="@style/body_text"
            android:layout_width="match_parent"
            android:textColor="@color/teal_700"
            android:layout_height="wrap_content"
            android:text="@string/question_2" />

        <!-- Question [2] : Answers -->
        <RadioGroup
            android:id="@+id/rb_question_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rb_uranus"
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="questionTwoOnRadioButtonClicked"
                android:text="@string/uranus" />


            <!-- Correct Answer -->
            <RadioButton
                android:id="@+id/rb_mercury"
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="questionTwoOnRadioButtonClicked"
                android:text="@string/mercury" />


            <RadioButton
                android:id="@+id/rb_jupiter"
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="questionTwoOnRadioButtonClicked"
                android:text="@string/jupiter" />

            <RadioButton
                android:id="@+id/rb_earth"
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="questionTwoOnRadioButtonClicked"
                android:text="@string/earth" />

        </RadioGroup>


        <!-- Question [3] -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_3_of_4"
            android:layout_marginTop="@dimen/margin_16"
            android:textColor="@color/purple_700"
            style="@style/body_text" />
        <TextView
            style="@style/body_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:text="@string/question_3" />

        <!-- Question [3] : Answer -->
        <EditText
            android:id="@+id/et_question3_answer"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_35"
            android:layout_height="wrap_content"
            android:hint="@string/mars"
            android:fontFamily="@font/open_sans_bold"
            android:textColorHint="@color/white"
            tools:ignore="Autofill" />


        <!-- Question [4] -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_4_of_4"
            android:layout_marginTop="@dimen/margin_16"
            android:textColor="@color/purple_700"
            style="@style/body_text" />

        <TextView
            style="@style/body_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_700"
            android:text="@string/question_4" />

        <!-- Question [4] : Answers -->
        <!-- Correct Answer -->
        <CheckBox
            android:id="@+id/cb_hyd_gas"
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hydrogen_gas" />

        <CheckBox
            android:id="@+id/cb_water"
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water" />

        <CheckBox
            android:id="@+id/cb_dust"
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dust" />

        <!-- Correct Answer -->
        <CheckBox
            android:id="@+id/cb_helium_gas"
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helium_gas" />

        <Button
            android:layout_marginTop="@dimen/margin_16"
            android:id="@+id/btn_submit"
            android:backgroundTint="@color/purple_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submitQuiz"/>

    </LinearLayout>

</ScrollView>